packages/svelte/test/compiler-errors/samples/store-template-expression-scope/main.svelte
<script>
	import { writable } from 'svelte/store';
	const store = writable();
</script>

<button
	on:click={(store) => {
		$store = Math.random();
	}} />
